# solana-drift-isolated-trade-poc

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml
backend/api/: [...path].rs  main.rs
backend/src/: lib.rs  main.rs
backend/src/api/: health.rs  main.rs  mod.rs  order.rs  user.rs
frontend/: .env.local.example  .gitignore  Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: AddressLink.tsx  BalancePanel.tsx  BalancesCard.tsx  Header.tsx  OrderForm.tsx  PositionsTable.tsx  ServiceStatusCard.tsx  TradeHistory.tsx  WalletProvider.tsx
frontend/hooks/: useAdminWallet.ts  useBalances.ts  usePositions.ts  useServiceStatuses.ts
frontend/lib/: perpMarkets.ts
frontend/pages/: _app.tsx  index.tsx
frontend/styles/: globals.css
frontend/types/: trading.ts
frontend/utils/: validateIsolatedOrderInput.ts
order-execution-service/: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  package.json  tsconfig.json
order-execution-service/ipc-poc/: README.md
order-execution-service/ipc-poc/rust-api/: Cargo.toml  README.md
order-execution-service/ipc-poc/rust-api/decoder-dumps/: 4mXkvzqN1n8WmF82Xb9C9teZhF6GJeGkUcupNshLFBdiB8idTuWET3BzTtgNZo4bvnPgKbRusQCX9pXjGTpSdF3K.json  4w1WV3b8Z1FkE4W5JzyMyc3SR2jLP5jaoDQPNxfDTWZJtR9p5dFSa7zsaDQgDedy2D4DDi8LAY6LXKndRqTHCk5X.json  MnmqKomt5SZW2YYmic3aUqi8LFCSr6tGxngsiJfW8s1NTZdmvNrUW6h2C8Uz3D8UuzFeedgsthWSqqvz7rEz8Cv.json  aggregated-actions.json
order-execution-service/ipc-poc/rust-api/idl/: drift.json
order-execution-service/ipc-poc/rust-api/migrations/: 0001_create_drift_action_logs.sql
order-execution-service/ipc-poc/rust-api/src/: db.rs  decoder.rs  executor.rs  ipc.rs  lib.rs  main.rs  routes.rs  types.rs
order-execution-service/ipc-poc/ts-worker/: .env  README.md  package.json  tsconfig.json
order-execution-service/ipc-poc/ts-worker/dumps/: getPositions.json_2025-11-11T10:12:48.438Z.json  userAccount.json_2025-11-11T10:12:48.441Z.json
order-execution-service/ipc-poc/ts-worker/scripts/: README.md  closePosition.ts  depositNativeSol.ts  depositToken.ts  getIsolatedBalance.ts  getMarket.ts  getPositionDetails.ts  getPositions.ts  initAndDeposit.ts  manualPerp.ts  openPosition.ts  testOpenAndClosePosition.ts  transferMargin.ts
order-execution-service/ipc-poc/ts-worker/src/: drift.ts  env.ts  index.ts  ipc.ts  logger.ts  types.ts
order-execution-service/scripts/: patch-rpc-websockets.mjs
order-execution-service/src/: index.ts
order-indexing-service/: .env.example  Cargo.toml  README.md
order-indexing-service/backfill-bin/: Cargo.toml
order-indexing-service/backfill-bin/src/: main.rs
order-indexing-service/history-bin/: Cargo.toml
order-indexing-service/history-bin/src/: main.rs
order-indexing-service/indexer-bin/: Cargo.toml
order-indexing-service/indexer-bin/src/: main.rs
order-indexing-service/indexer-common/: Cargo.toml
order-indexing-service/indexer-common/src/: lib.rs
rust-backend/: Cargo.toml
rust-backend/src/: main.rs
ts-backend/: package-lock.json  package.json
