[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "backend_vercel"
path = "api/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.6", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
vercel_runtime = "1.1.6"
lambda_http = "0.15.1"
