[package]
name = "indexer-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indexer-common = { path = "../indexer-common" }
sqlx.workspace = true
solana-client.workspace = true
solana-program.workspace = true
solana-transaction-status.workspace = true
dotenvy.workspace = true
