[package]
name = "indexer-common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-client.workspace = true
solana-program.workspace = true
solana-transaction-status.workspace = true
sqlx.workspace = true
tracing.workspace = true
