[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
dashmap = "5"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
base64 = "0.22"
bs58 = "0.5"
solana-sdk = "1.18.23"
solana-client = "1.18.23"
solana-transaction-status = "1.18.23"
solana-rpc-client = "1.18.23"

bincode = "1"
borsh = { version = "1", features = ["derive"] }
sha2 = "0.10"
once_cell = "1"
reqwest = "0.11"
sqlx = { version = "=0.7.3", default-features = false, features = ["runtime-tokio", "postgres", "tls-native-tls"] }
